   is a symlink, while `/run` exists and is a true directory. [#3099]

 - Augmented `nut.exe` launcher with `status` and `restart` actions, and
   general ability to debug-log the activities during service management
   operations. [PR #3235]

 - Fixed `LISTEN *` handling for `upsd.exe` in NUT for Windows builds. [PR #3237]

 - Revised CI and deliverable scripts, and Makefile recipes, to not use
   the verbatim `grep -E` (loudly preferred by newer systems, but may be
   absent on older ones) after all, nor use `egrep` (loudly disliked by
   newer systems). Instead, use what `configure` script detected for the
   generated files (or ones made from templates), and use a similar
   detection in standalone scripts. Also revised the use of `grep -q`,
   `id -u`, `diff -u`, etc. which are not ubiquitous, and of `test -e`
   which is not only absent in some older shells, but can cause them to
   abort processing the script immediately. Also the `if ! condition`
   syntax is not supported everywhere (or the `!` operator generally).
   [#3099, #1660]

 - Revised `tools/gitlog2version.sh` helper script (logic added into
   a new `tools/semver-compare.sh`) with a mode to expand NUT SEMVER
   components into wide zero-padded numbers, so it is easier to
   alphanumerically compare different releases regardless of version
   component lengths in digits (and differences in their amounts). You can
   request an inverse operation with `NUT_VERSION_STRIP_LEADING_ZEROES=true`.
   Added tests to cover different shell interpreter platforms (piggy-back
   on the `tests/nut-driver-enumerator-test.sh` script), and made sure
   that outputs of legacy-mode processing (with `NUT_VERSION_DEFAULT`
   string provided by caller or saved in a tarball) are consistent with
   git-mode. The new `tools/semver-compare.sh` helper can be used directly
   to expand and strip version strings, sort and compare multiple versions
   as one simple operation. [issue #3055, PRs #3213, #3217]
